--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "ts-node --esm --project tsconfig.json scripts/migrateToMongo.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -42,9 +43,12 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -65,6 +69,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
